# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  output.rs  output.txt  rustfmt.toml
.sqlx/: query-0138c079455372eb240dbedb54c8add020b63798ff149c8dc57cba347e6a7a73.json  query-0206daed4b0dc7d170af9a3e29496d8e6e8bc15ee5abc6812b37a8582b98b17f.json  query-078cb8526b6977a392a782f96b1ca6483e78c5d3247ee49b365ae7dfafc33bac.json  query-08ec9b475cbeb388da9ca9811f2b2c870a8dfb984bb453bb8a7edd0b13168fdc.json  query-0cf203fab81a5762763d08e4084f6873a70a1297e9782917700842c2740eb465.json  query-1085b578c234c78e6f43154eb23e319a4d46d67ea4e89d9b4addaa306ac6a1e3.json  query-10de149dddcd3fb90916fbeeaff1c47b43cbff26619a8ce46b559ef97f940034.json  query-1f43572be08bbaba3cbec006f22a3e6df7ef6b7b19262cdad9fb95a61588a188.json  query-298815ddf5a1467bb608915328ef2891b871263235f33eeaa8bc746c43266722.json  query-2ce3dba58ecbddd1b43bbbecdc389aec42c1aa68b21961c343cdcb27ea5bc0a9.json  query-2efe6b71123193bc58a35f8f3e12a7ef1ea7f1a5f9dfbcd2c8b08ff4950dac8f.json  query-372bb53a5e6aa2d062d7691ad600b81449109c4cff96445597fb23597a28d171.json  query-3c615d0daf7a2180d103ade4077bc6c90f3d2da6ed3974f31e7172b757c4e213.json  query-456da1f7e4ffc0f554858bef3bfde193f21abf1528e82bdf4da61687724753f0.json  query-4ac4df2cb645243fc0c1b1fc1e84ad0cb2b136f64df728f37f3717314e97ca27.json  query-4da86a7b2d945800996a533f04dae3cc99f103ca5f28e0ae0e3d424234a44a8c.json  query-4ec1bdcaf79c7a72b1be0f55a1dfe26e07c069747b4656dcaa9ce7d1a2900c04.json  query-638b8c6ce0b7eeb31211ca59328bb63e005c865c1ff44d8537828627d809a811.json  query-63c827eacdc6c26ff3225a8f85e56e3963c1c64139bf4db8f7e8e6c4a8727884.json  query-653add67bfbc8d3be74f724be3a77d21f01aadfd60cd26e8999e8eee5bf95d08.json  query-749ace712222e57716c53dfeaa01c30924db556daec195a428d75bb8ad1fed56.json  query-793d330f12b0ae1c37ac394f759ba825ce0ba091ca5888028c24c556fd83598b.json  query-82f361acc2ef275a0fcc601bc551de757768f93b75983380b5abe37470d8b231.json  query-8c32314d95a79d118c29776be4a551d7a08e87bb0ba167e03fee0059d8483a4c.json  query-8da21cce1b8f4c8e76634584a9c4475ee7494c46c4d220b8bb0160baf75f43cd.json  query-94cbe6826a788aa65385a6e6db6655e1a90c41ffcf7e00da7a27ede20c391af6.json  query-9ab6536d2bf619381573b3bf13507d53b2e9cf50051e51c803e916f25b51abd2.json  query-9c3ce9e7118a5d41021d0f77ce07828fa7decf542767ed963925e5e06958eddf.json  query-a8182ac456e8d86177c8d4d719c94e3208cbea61ac0e0b958fae3399ba5cdf07.json  query-ac022ad0cffcbff58aec6c59523c488b50cca8590412eedefcbbe47f3b1b4017.json  query-acd8675960c18bafcb2efae4169e1426ea05e95b689878d17862028883d96cea.json  query-adf0ecd631f432e8edff4ea8bcb00b54219d820a42a21039b7643fbdc5b95646.json  (+17 more)
configuration/: base.yaml  (+1 more)
(+105 files in other folders)
