[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
config = "0.15.11"
const_format = "0.2.34"
# delegate = "0.13.3"
derive_more = { version = "2.0.1", features = ["into", "constructor"] }
futures = "0.3.31"
kust = "0.0.2"
naan = "0.1.32"
nameof = "1.2.2"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive", "std"] }
serde-aux = "4.7.0"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
# tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = "0.20.0"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls", "cookies"] }
# rand = { version = "0.9.1", features = ["std_rng"] }
rand = { version = "0.8.5", features = ["std_rng"] }
rand_core = "0.6.4"
eyre = "0.6.12"
tokio = { version = "1.45.1", features = ["macros"] }
lazy_errors = { version = "0.10.1", features = ["std", "eyre"] }
secrecy = { version = "0.10.3", features = ["serde"] }
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
urlencoding = "2.1.3"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
serde_json = "1.0.140"
sync-cell = "0.2.0"
claims = "0.8.0"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2.10.0"
once_cell = "1.21.3"

# Can these be upgraded to a higher version? 
fake = { version = "~2.3" }
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
#
tokio = { version = "1.45.1", features = ["rt","macros"] }
wiremock = "0.6.3"
serde_json = "1.0.140"
anyhow = "1.0.98"
linkify = "0.10.0"
serde_urlencoded = "0.7.1"
